sdk/v0.5.6/bedrock.mdx
---
title: "bedrock"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/bedrock.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.bedrock


Pixeltable UDFs for AWS Bedrock AI models.

Provides integration with AWS Bedrock for accessing various foundation models
including Anthropic Claude, Amazon Titan, and other providers.


## <span style={{ 'color': 'gray' }}>func</span>&nbsp; invoke_tools()

```python Signature
invoke_tools(
    tools: pixeltable.func.tools.Tools,
    response: pixeltable.exprs.expr.Expr
) -> pixeltable.exprs.inline_expr.InlineDict
```

Converts an Anthropic response dict to Pixeltable tool invocation format and calls `tools._invoke()`.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; converse()

```python Signature
@pxt.udf
converse(
    messages: pxt.Json,
    *,
    model_id: pxt.String,
    system: pxt.Json | None = None,
    inference_config: pxt.Json | None = None,
    additional_model_request_fields: pxt.Json | None = None,
    tool_config: pxt.Json | None = None
) -> pxt.Json
```

Generate a conversation response.

Equivalent to the AWS Bedrock `converse` API endpoint.
For additional details, see: [https://docs.aws.amazon.com/bedrock/latest/userguide/conversation-inference.html](https://docs.aws.amazon.com/bedrock/latest/userguide/conversation-inference.html)

__Requirements:__

- `pip install boto3`

**Parameters:**

- **`messages`** (`pxt.Json`): Input messages.
- **`model_id`** (`pxt.String`): The model that will complete your prompt.
- **`system`** (`pxt.Json | None`): An optional system prompt.
- **`inference_config`** (`pxt.Json | None`): Base inference parameters to use.
- **`additional_model_request_fields`** (`pxt.Json | None`): Additional inference parameters to use.

**Returns:**

- `pxt.Json`: A dictionary containing the response and other metadata.

**Examples:**

Add a computed column that applies the model `anthropic.claude-3-haiku-20240307-v1:0` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
msgs = [{'role': 'user', 'content': [{'text': tbl.prompt}]}]
tbl.add_computed_column(
    response=messages(
        msgs, model_id='anthropic.claude-3-haiku-20240307-v1:0'
    )
)
```

